# python_package

./: setup.py  test.py
cebrify/: README.md  pyproject.toml
cebrify/src/cebrify_bekircbc/: __init__.py  csvReader.py  maxMinFinder.py
data/: aaa.csv
